--- a/IdeaProjects/rs/pom.xml
+++ b/IdeaProjects/rs/pom.xml
@@ -46,11 +46,11 @@
             <version>1.19.2</version>
         </dependency>
 
-        <!--   <dependency>
-               <groupId>org.springframework.boot</groupId>
-               <artifactId>spring-boot-autoconfigure</artifactId>
-               <version>2.1.6.RELEASE</version>
-           </dependency>-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.3.2.Final</version>
+        </dependency>
 
     </dependencies>
 
