--- a/IdeaProjects/rs/src/main/resources/application.properties
+++ b/IdeaProjects/rs/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.datasource.platform=postgres
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/TestJavaProject
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=user
 spring.datasource.password=111
 
